--- a/tox.ini
+++ b/tox.ini
@@ -24,6 +24,6 @@ downloadcache = ~/cache/pip
 commands = flake8
 
 [flake8]
-ignore = H302,H401,H402,H404
+#ignore = H302,H401,H402,H404
 builtins = _
 exclude = .venv,.git,.tox,dist,doc,*openstack/common*,*lib/python*,*egg,build,tools
